syntax = "proto3";
package metrics.v1;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/metrics/v1;metricsv1";

service MetricsService {
  rpc GetMetrics(MetricsRequest) returns (MetricsResponse);
}

message MetricsRequest {}
message MetricsResponse {
  repeated Metric metrics = 1;
}

message Metric {
  string name = 1;
  string type = 2;
  string help = 3;
  double value = 4;
  map<string, string> labels = 5;
}
